# get-papers-list

./: README.md  pyproject.toml
get_papers_list/: cli.py  get_papers.py  read.md
